fix horizontal scroll

--- a/src/assets/style/layouts/storage.css
+++ b/src/assets/style/layouts/storage.css
@@ -30,5 +30,5 @@
 .storage_image{
   position: absolute;
   bottom: -20px;
-  left: 425px;
+  right: -160px;
 }
